// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldMappingModal > matches snapshot with an existing mapping 1`] = `
"<div style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 60; padding: 24px;">
  <div class="card" style="width: 560px; max-width: 100%; max-height: 90%; overflow: auto; box-shadow: var(--sh-pop);">
    <!-- head -->
    <div class="row between" style="padding: 18px 24px; border-bottom-width: var(--line); border-bottom-style: var(--line); border-bottom-color: var(--line);">
      <div class="col" style="gap: 2px;"><span class="mono faint" style="font-size: 10.5px; letter-spacing: 0.12em; text-transform: uppercase;">GitHub</span>
        <h3 style="font-size: 17px; font-weight: 600;">Field mapping</h3>
      </div><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg></button>
    </div>
    <div style="padding: 24px;">
      <!--v-if-->
      <div class="alert info" role="alert"><svg class="ico a-ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <circle cx="12" cy="12" r="10"></circle>
          <line x1="12" y1="16" x2="12" y2="12"></line>
          <line x1="12" y1="8" x2="12.01" y2="8"></line>
        </svg>
        <div class="a-body">
          <div class="a-title">How mapping works</div>
          <div class="a-text"> Each field is a dot path into the incoming JSON payload, e.g. <code class="mono">data.subject</code>. Once any field below is set, every field is read only from its own mapped path — a blank field is left empty, it does <strong>not</strong> fall back to that payload's raw top-level key. Clearing every field removes the mapping entirely and restores raw ingestion (top-level <code class="mono">title</code>, <code class="mono">content</code>, <code class="mono">html</code>, <code class="mono">tags</code>, <code class="mono">created</code> keys). </div>
        </div>
        <!--v-if-->
      </div>
      <div class="alert warn" role="alert" style="margin-top: 14px;"><svg class="ico a-ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"></path>
          <line x1="12" y1="9" x2="12" y2="13"></line>
          <line x1="12" y1="17" x2="12.01" y2="17"></line>
        </svg>
        <div class="a-body">
          <div class="a-title">Partial mapping</div>
          <div class="a-text"> Only some fields are mapped — the rest will be left empty on every delivery, even if the payload also has a matching top-level key. </div>
        </div>
        <!--v-if-->
      </div>
      <div class="col gap-4" style="margin-top: 18px;">
        <div class="field"><span class="field-label"><!--v-if--><span>Title</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. title"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to the record title, e.g. data.subject</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Content</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. content"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to the markdown/plain-text body</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>HTML</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. html"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to an HTML body — converted to markdown</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Source</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. source"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to override the source name shown on the record</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Tags</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. tags"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to a tags array, or a comma-separated string</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Created</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. created"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to an ISO timestamp</span>
        </div>
      </div>
      <div class="row gap-3" style="justify-content: flex-end; margin-top: 22px;"><button class="btn btn-ghost">
          <!--v-if-->cancel
          <!--v-if-->
        </button><button class="btn btn-accent"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <polyline points="20 6 9 17 4 12"></polyline>
          </svg>save mapping
          <!--v-if-->
        </button></div>
    </div>
  </div>
</div>"
`;

exports[`FieldMappingModal > matches snapshot with no existing mapping 1`] = `
"<div style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 60; padding: 24px;">
  <div class="card" style="width: 560px; max-width: 100%; max-height: 90%; overflow: auto; box-shadow: var(--sh-pop);">
    <!-- head -->
    <div class="row between" style="padding: 18px 24px; border-bottom-width: var(--line); border-bottom-style: var(--line); border-bottom-color: var(--line);">
      <div class="col" style="gap: 2px;"><span class="mono faint" style="font-size: 10.5px; letter-spacing: 0.12em; text-transform: uppercase;">GitHub</span>
        <h3 style="font-size: 17px; font-weight: 600;">Field mapping</h3>
      </div><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg></button>
    </div>
    <div style="padding: 24px;">
      <!--v-if-->
      <div class="alert info" role="alert"><svg class="ico a-ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <circle cx="12" cy="12" r="10"></circle>
          <line x1="12" y1="16" x2="12" y2="12"></line>
          <line x1="12" y1="8" x2="12.01" y2="8"></line>
        </svg>
        <div class="a-body">
          <div class="a-title">How mapping works</div>
          <div class="a-text"> Each field is a dot path into the incoming JSON payload, e.g. <code class="mono">data.subject</code>. Once any field below is set, every field is read only from its own mapped path — a blank field is left empty, it does <strong>not</strong> fall back to that payload's raw top-level key. Clearing every field removes the mapping entirely and restores raw ingestion (top-level <code class="mono">title</code>, <code class="mono">content</code>, <code class="mono">html</code>, <code class="mono">tags</code>, <code class="mono">created</code> keys). </div>
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <div class="col gap-4" style="margin-top: 18px;">
        <div class="field"><span class="field-label"><!--v-if--><span>Title</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. title"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to the record title, e.g. data.subject</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Content</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. content"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to the markdown/plain-text body</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>HTML</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. html"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to an HTML body — converted to markdown</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Source</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. source"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to override the source name shown on the record</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Tags</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. tags"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to a tags array, or a comma-separated string</span>
        </div>
        <div class="field"><span class="field-label"><!--v-if--><span>Created</span>
          <!--v-if-->
          <!--v-if--></span><input class="input mono" style="font-size: 13.5px;" placeholder="e.g. created"><span class="field-msg"><!--v-if--><!--v-if--> Dot path to an ISO timestamp</span>
        </div>
      </div>
      <div class="row gap-3" style="justify-content: flex-end; margin-top: 22px;"><button class="btn btn-ghost">
          <!--v-if-->cancel
          <!--v-if-->
        </button><button class="btn btn-accent"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <polyline points="20 6 9 17 4 12"></polyline>
          </svg>save mapping
          <!--v-if-->
        </button></div>
    </div>
  </div>
</div>"
`;
